--- a/src/assets/style/emailfiles/bussinessemail/businessemailtop.css
+++ b/src/assets/style/emailfiles/bussinessemail/businessemailtop.css
@@ -5,16 +5,15 @@
   padding: 2rem;
   border-radius: 10px;
   align-items: center;
-  max-width: 1700px;
+  max-width: 100%;
   margin: 0 auto;
-  margin-right: 3rem;
 }
 
 /* Left side image styling */
 .email-image img {
   border-radius: 10px;
   width: 100%;
-  max-width: 1000px;
+  max-width: 700px;
 }
 
 /* Right side content styling */
