--- a/src/assets/style/emailfiles/bussinessemail/faq.css
+++ b/src/assets/style/emailfiles/bussinessemail/faq.css
@@ -54,7 +54,7 @@ hr {
 /* Responsive Design */
 @media (max-width: 768px) {
   .faq-container {
-    margin: 1.5rem 2rem;
+    margin: 1rem 0;
     text-align: center;
   }
 
@@ -63,18 +63,29 @@ hr {
   }
 
   .faq-header {
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
+    margin: 0;
+    text-align: center;
+  }
+  .faq-section{
+    margin-top: 2rem;
+  }
+  .faq-answer{
+    text-align: justify !important;
+  }
+  .faq-question{
+    font-size: 1rem;
   }
 }
 
 @media screen and (max-width: 480px) {
   .faq-container {
-    width: 80%;
+    width: 100%;
     text-align: center;
   }
 
   .faq-header {
-    width: 80%;
+    width: 100%;
     text-align: center;
   }
 }
