--- a/src/assets/style/emailfiles/microsoft/microsoft_top.css
+++ b/src/assets/style/emailfiles/microsoft/microsoft_top.css
@@ -1,6 +1,5 @@
 .microsoft365-container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 20px;
@@ -100,13 +99,31 @@ ul {
   .microsoft365-container {
     flex-direction: column;
     text-align: center;
+    padding: 0;
   }
 
   .right-content {
     padding: 10px;
   }
 
+  .right-content h1{
+    font-size: 1rem;
+  }
+
   .pricing-button {
     justify-content: center;
+    margin: 0 auto;
+  }
+  .features-list li{
+    font-size: 16px;
+  }
+  .features-list .list-icon{
+    font-size: 16px;
+  }
+  .rating-section{
+    flex-direction: column;
+  }
+  .rating-section p{
+    font-size: 14px;
   }
 }
