--- a/src/assets/style/homefiles/homewebsite_hosting.css
+++ b/src/assets/style/homefiles/homewebsite_hosting.css
@@ -86,8 +86,14 @@
   .columns-section {
     flex-direction: column;
   }
-
+  .home-hosting-marketing h1{
+    font-size: 1.5rem;
+  }
   .column {
     margin: 10px 0;
+  }
+
+  .column p{
+    text-align: justify;
   }
 }
