--- a/src/assets/style/homefiles/homeword.css
+++ b/src/assets/style/homefiles/homeword.css
@@ -26,7 +26,7 @@
   transform: translateY(-50%);
   background-color: white;
   padding: 20px;
-  max-width: 35%;
+  max-width: 700px;
   height: 80%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -37,6 +37,7 @@
 .content-box h1 {
   font-size: 2rem;
   margin-bottom: 20px;
+  line-height: 3.5rem;
 }
 
 /* Additional image on the bottom right */
@@ -44,8 +45,8 @@
   position: absolute;
   bottom: 5%;
   right: 5%;
-  width: 250px;
-  height: 170px;
+  width: 400px;
+  height: 250px;
   z-index: 2;
   border-radius: 8px;
 }
@@ -93,7 +94,6 @@
     transform: translate(-50%, -50%);
     padding: 15px;
   }
-
   .bottom-right-image {
     width: 150px;
     /* Adjust image size for medium screens */
@@ -115,10 +115,9 @@
 
   .content-box {
     max-width: 100%;
+    position: relative;
     background-color: lightgray;
-    /* Further increase max-width for smaller screens */
-    right: 5%;
-    transform: translate(-50%, -50%);
+    top: 0;
     padding: 10px;
     height: 100%;
     /* Allow height to adjust dynamically */
@@ -130,25 +129,30 @@
   }
 
   .content-box h1 {
-    font-size: 1.8rem;
+    font-size: 1rem !important;
+    line-height: normal;
     /* Slightly reduce font size for smaller screens */
   }
 
   .content-bottom {
+    position: relative;
     padding: 10px;
-    top: 47%;
+    top: 0;
     flex-direction: column;
     /* Ensure stacked layout */
     background-color: lightgray;
     align-items: flex-start;
   }
 
-  .products-list ul li {
+  .products-list li {
     font-size: 12px;
   }
 
   .bottom-right-image {
-    display: none;
+    position: relative;
+    width: 200px !important;
+    height: 120px;
+    margin: 0 auto;
   }
 }
 
